# settlers

./: .gitignore  readme.md
client/: package-lock.json  package.json  rollup.config.js
client/src/: main.js  main.ts
client/src/helpers/: protobuf.ts
client/static/: index.html
docs/: readme.md  settlers.toml
protos/: auth.proto
public/: index.html  script.js
public/js/: script.js
server/: .env.example  Cargo.toml  build.rs  example.settlers.toml  readme.md
server/src/: communicator.rs  helpers.rs  intermedium.rs  main.rs  protos.rs
server/src/db/: mod.rs
server/src/db/entities/: auth.rs  auth_method.rs  auth_session.rs  mod.rs  session.rs  user.rs
server/src/db/migrations/: m0001_create_users_table.rs  m0001_initial_structure.rs  m0002_create_auths_methods_table.rs  m0002_create_auths_table.rs  m0002_create_sessions_table.rs  m0003_create_auths_sessions_table.rs  mod.rs
server/src/http/: api.rs  core.rs  helpers.rs  mod.rs  serve.rs  ws.rs
server/src/settings/: init.rs  mod.rs  structs.rs
