[package]
name = "settlers-server"
version = "0.1.0"
edition = "2021"
description = "Server of online implementation of the popular board game Catan"
authors = ["Sergei Ivankov <sergeiivankov@pm.me>"]
repository = "https://github.com/sergeiivankov/settlers"
license = "MIT"
resolver = "2"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[dependencies]
bytes = "1.4.0"
config = { version = "0.13.3", default-features = false, features = ["toml"] }
dirs = "4.0.0"
dotenv = "0.15.0"
env_logger = { version = "0.10.0", default-features = false, features = ["humantime"] }
fastrand = "1.9.0"
flate2 = { version = "1.0.25", optional = true }
futures-util = { version = "0.3.27", default-features = false, features = ["sink", "std"] }
hex = { version = "0.4.3", optional = true }
http-body-util = "0.1.0-rc.2"
hyper = { version = "1.0.0-rc.3", features = ["server", "http1"] }
lazy_static = "1.4.0"
log = { version = "0.4.17", features = ["max_level_debug", "release_max_level_info"] }
quick-protobuf = "0.8.1"
rustls-pemfile = { version = "1.0.2", optional = true }
sea-orm = { version = "0.11.1", default-features = false, features = ["macros", "runtime-tokio-rustls"] }
sea-orm-migration = { version = "0.11.1", default-features = false, features = ["runtime-tokio-rustls"] }
sea-query = "0.28.3"
serde = { version = "1.0.156", features = ["derive"] }
serde_path_to_error = "0.1.10"
sha-1 = { version = "0.10.1", optional = true }
strum = { version = "0.24.1", features = ["derive"] }
tar = { version = "0.4.38", default-features = false, optional = true }
tokio = { version = "1.26.0", features = ["rt-multi-thread", "net", "fs", "signal", "sync", "macros"] }
tokio-rustls = { version = "0.23.4", default-features = false, features = ["dangerous_configuration"], optional = true }
tokio-tungstenite = { version = "0.18.0", default-features = false, features = ["handshake"] }
walkdir = { version = "2.3.2", optional = true }

[build-dependencies]
flate2 = { version = "1.0.25", optional = true }
pb-rs = { version = "0.10.0", default-features = false }
tar = { version = "0.4.38", default-features = false, optional = true }
walkdir = "2.3.2"

[features]
default = ["db_sqlite"]
client_resources_caching = ["flate2", "hex", "sha-1", "walkdir"]
client_resources_packing = ["flate2", "hex", "sha-1", "tar"]
db_mysql = ["sea-orm/sqlx-mysql", "sea-orm-migration/sqlx-mysql"]
db_postgres = ["sea-orm/sqlx-postgres", "sea-orm-migration/sqlx-postgres"]
db_sqlite = ["sea-orm/sqlx-sqlite", "sea-orm-migration/sqlx-sqlite"]
secure_server = ["rustls-pemfile", "tokio-rustls"]
release_max_level_debug = ["log/release_max_level_debug"]
rustls_logging = []